--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: 🛎 Check out main
-        uses: actions/checkout@main
+        uses: actions/checkout@v3
         with:
           fetch-depth: 1
       - name: 🔧 Setup Pages
