--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -3,10 +3,7 @@ name: Test build
 on:
   push:
     branches:    
-      - '*'
-      - '*/*'
-      - '**' 
-      - '!main'
+      - dev
 
 jobs:
   build:
@@ -18,8 +15,9 @@ jobs:
 
     steps:
       - name: 🛎 Check out repo
-        uses: actions/checkout@main
+        uses: actions/checkout@v3
         with:
+          ref: dev
           fetch-depth: 1
       - name: Use Node.js
         uses: actions/setup-node@master
