--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -9,6 +9,8 @@ theme = "hugo-theme-typography"
 
   favicon   = "favicon.png"
 
+  iconsource  = "feather" # Source of the icon font (defaults to feather, options: simple-icons, feather, fontawesome)
+
   # customcss = ["foo.css"] # include custom css files placed under assets/
   # customjs  = ["foo.js"]  # include custom JavaScript files placed under assets/
 
@@ -33,20 +35,30 @@ theme = "hugo-theme-typography"
     html_attributes = "rel=\"me\""  # add rel attribute for Mastodon profile link verification
 
 [menu]
-  [[menu.main]]
-    name        = "Home"
-    url         = "/"
-    weight      = 1
-  [[menu.main]]
-    name        = "Blog"
-    url         = "/blog/"
-    weight      = 2
-  [[menu.main]]
-    name        = "About"
-    url         = "/about/"
-    weight      = 3
-  [[menu.main]]
-    name        = "Contact"
-    url         = "/contact/"
-    weight      = 3
-    identifier  = "hide-from-nav"
+    [[menu.main]]
+        name = "Home"
+        url  = "/"
+        weight = 1
+    [[menu.main]]
+        name = "Blog"
+        url  = "/blog"
+        weight = 2
+    [[menu.main]]
+        name = "Photography"
+        url = "/photography"    
+        weight = 3
+        identifier = "hide-from-nav"
+    [[menu.main]]
+        name = "Publications"
+        url = "/publications"
+        weight = 4
+        identifier = "hide-from-nav"
+    [[menu.main]]
+        name = "CV"
+        url = "/cv"
+        weight = 5
+    [[menu.main]]
+        name = "About"
+        url = "/about"
+        weight = 6
+
