--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -44,21 +44,13 @@ theme = "hugo-theme-typography"
         url  = "/blog"
         weight = 2
     [[menu.main]]
-        name = "Photography"
-        url = "/photography"    
-        weight = 3
-        identifier = "hide-from-nav"
-    [[menu.main]]
-        name = "Publications"
-        url = "/publications"
-        weight = 4
-        identifier = "hide-from-nav"
-    [[menu.main]]
-        name = "CV"
-        url = "/cv"
-        weight = 5
-    [[menu.main]]
         name = "About"
         url = "/about"
-        weight = 6
+        weight = 3
+    [[menu.main]]
+        name = "Contact"
+        url = "/contact"
+        weight = 4
+        identifier = "hide-from-nav"
+
 
