--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -15,23 +15,29 @@ theme = "hugo-theme-typography"
   # customjs  = ["foo.js"]  # include custom JavaScript files placed under assets/
 
   [[params.social]]
-    url   = "https://github.com"    # link to your page
-    icon  = "github"                # name of the feather icon to use, see feathericons.com for the full list
+    url     = "https://github.com"    # link to your page
+    icon    = "github"                # name of the icon to use, see feathericons.com, simpleicons.org, or fontawesome.com for the full list
+    weight  = 1
   [[params.social]]
-    url   = "https://twitter.com/"
-    icon  = "twitter"
+    url     = "https://twitter.com/"
+    icon    = "x"
+    weight  = 2
   [[params.social]]
-    url   = "https://instagram.com/"
-    icon  = "instagram"
+    url     = "https://instagram.com/"
+    icon    = "instagram"
+    weight  = 3
   [[params.social]]
-    url   = "https://linkedin.com/"
-    icon  = "linkedin"
+    url     = "https://linkedin.com/"
+    icon    = "linkedin"
+    weight  = 4
   [[params.social]]
-    url   = "mailto:youremail@email.com"
-    icon  = "at-sign"
+    url     = "mailto:youremail@email.com"
+    icon    = "at-sign"
+    weight  = 5
   [[params.social]]
-    url   = "https://mastodon.social/"
-    icon  = "link"
+    url     = "https://mastodon.social/"
+    icon    = "link"
+    weight  = 7
     html_attributes = "rel=\"me\""  # add rel attribute for Mastodon profile link verification
 
 [menu]
